--- a/css/adaptive.css
+++ b/css/adaptive.css
@@ -173,6 +173,14 @@
   .title {
     font-size: 33px; }
 
+  .feedback .feedback_inner {
+    border: 1px solid #FF941C;
+    border-radius: 28px;
+    padding: 43px 43px 53px 17px; }
+
+  input, textarea {
+    width: 320px; }
+
   .main .main_inner .left_block_main .sub_title_main {
     font-size: 22px; } }
 @media (max-width: 450px) {
@@ -191,12 +199,29 @@
     bottom: 26px; } }
 @media (max-width: 400px) {
   .main .main_inner .left_block_main .main_title {
-    font-size: 37px; } }
+    font-size: 37px; }
+
+  input, textarea {
+    width: 250px;
+    padding: 14px 0px 14px 21px;
+    font-size: 16px; }
+
+  .href_btn_feedback {
+    padding: 11px 36px; }
+
+  .feedback_title {
+    font-size: 22px;
+    color: #FF941C; } }
 @media (max-width: 340px) {
   .price .content_price .block_price .href_btn_block_price {
     font-size: 16px; }
 
   .price .content_price .block_price .title_number_price {
     margin-left: 40px; } }
+@media (max-width: 320px) {
+  input, textarea {
+    width: 229px;
+    padding: 14px 0px 14px 21px;
+    font-size: 16px; } }
 
 /*# sourceMappingURL=adaptive.css.map */
