--- a/scss/adaptive.scss
+++ b/scss/adaptive.scss
@@ -204,8 +204,11 @@
         font-size: 43px;
     }
     .title{
-        font-size: 33px;
+        font-size: 22px;
 
+    }
+    .price {
+        padding-bottom: 10px;
     }
     .feedback .feedback_inner {
         border: 1px solid #FF941C;
