--- a/css/adaptive.css
+++ b/css/adaptive.css
@@ -171,7 +171,10 @@
     font-size: 43px; }
 
   .title {
-    font-size: 33px; }
+    font-size: 22px; }
+
+  .price {
+    padding-bottom: 10px; }
 
   .feedback .feedback_inner {
     border: 1px solid #FF941C;
