--- a/css/style.css
+++ b/css/style.css
@@ -368,7 +368,10 @@ li {
     font-size: 43px; }
 
   .title {
-    font-size: 33px; }
+    font-size: 22px; }
+
+  .price {
+    padding-bottom: 10px; }
 
   .feedback .feedback_inner {
     border: 1px solid #FF941C;
